--- a/app/tv/src/App.css
+++ b/app/tv/src/App.css
@@ -1,3 +1,13 @@
+a {
+  text-decoration: none !important;
+}
+
+.my-ui-back {
+  font-size: 2em;
+  color: black;
+  margin-left: 1em;
+}
+
 .App {
   text-align: center;
   min-height: 100vh;
