--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -1138,6 +1138,7 @@ mark, .highlight, li em, .mv-extra-desc > em, .mv-extra-desc > .searchmatch, det
 #datasources-setting .culture { background: #d3570c2b; }
 #datasources-setting .science { background: #2ed30c2b; }
 #datasources-setting .business { background: #0c91d32b; }
+#datasources-setting .legal { background: #ed0e0e82; }
 #datasources-setting .news { background: #9708e82b; }
 #datasources-setting .media { background: #ee9d1e99; }
 #datasources-setting .web { background: #4b95dc82; }
