new datasource: wikiquote, clear geofilter

--- a/app/audio/main.css
+++ b/app/audio/main.css
@@ -456,11 +456,11 @@ a{cursor:pointer;color:#99c2c6;-webkit-tap-highlight-color:rgba(0,0,0,0)}
 }
 
 .pk_selection .pk_dat{
-	background:#383838;
+	background: transparent;
 	padding:2px 5px;
 	color:#99c2c6;
 	min-width: 14px;
-    display: inline-block
+  display: inline-block
 }
 
 .pk_btn.icon-clearsel{
@@ -1444,6 +1444,8 @@ input.pk_horiz.pk_w180{
 	
 	.pk_tb .pk_selection .pk_btn{
 		width: 50px;
+    height: fit-content;
+    min-height: 3em;
 		line-height: 10px;
 		font-size: 11px;
 		height: 32px;
