--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -1110,6 +1110,10 @@ mark, .highlight, li em, .mv-extra-desc > em, .mv-extra-desc > .searchmatch, det
   text-wrap: nowrap;
 }
 
+.settings-container {
+  min-height: max-content;
+}
+
 /* */
 
 #datasources-used {
