--- a/app/map/css/main.css
+++ b/app/map/css/main.css
@@ -16,6 +16,10 @@ html, body {
   max-height: 60vh; 
 }
 
+.og-button {
+  z-index: 99999;
+}
+
 #title {
   position: absolute;
   top: .8em;
@@ -26,4 +30,13 @@ html, body {
   background: #fbfaf991;
   padding: 0px 0.3em;
   border-radius: 0.3em;
+}
+
+@media only screen and (max-width: 900px) {
+
+  #title {
+    left: 1%;
+    font-size: smaller;
+  }
+
 }
