--- a/app/artifact/css/main.css
+++ b/app/artifact/css/main.css
@@ -9,6 +9,16 @@ span#loader {
   margin-top: 0.4em;
 }
 
+button#download {
+  margin-left: 160px;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  background-color: #448181;
+  color: white;
+  cursor: pointer;
+}
+
 .logo {
   font-size: 30px;
   margin-bottom: 3px;
@@ -45,7 +55,6 @@ iframe {
   display: flex;
   align-items: top;
   margin-bottom: 5px;
-  font-family: Arial, sans-serif;
 }
 
 .form-group label {
