TTS in AI chat + autospeak option

--- a/app/chat/css/main.css
+++ b/app/chat/css/main.css
@@ -798,8 +798,11 @@ pre a {
   border-color: rgba(0, 0, 0, .3);
 }
 
-.mdOption {
+.request .mdOption {
   display: none;
+}
+
+.mdOption {
   position: absolute;
   right: 5px;
   bottom: 0px;
