--- a/app/chat/css/main.css
+++ b/app/chat/css/main.css
@@ -460,7 +460,7 @@ pre a {
   height: 0;
 }
 
-.speechButtons {
+.speechButtons, #pauseSpeaking, #stopSpeaking {
   /*display: none;*/
   width: 40px;
   height: 47px;
