video app bookmarking

--- a/app/video/styles/main.css
+++ b/app/video/styles/main.css
@@ -250,6 +250,7 @@ body.dark .toogles-video h3{
   bottom: -0.3em;
   z-index: 9999;
   color: white;
+  font-size: small !important;
 }
 
 #wander-to-previous {
