--- a/app/video/views/view.html
+++ b/app/video/views/view.html
@@ -66,7 +66,7 @@
 
           }
 
-          $('#bookmark-video').click(function(event) { window.top.postMessage({ event_id: 'add-bookmark', data: { language: getParameterByName('l'), qid: '', tags: [ 'work', 'video' ], url: 'https://conze.pt/app/video/?l=en&#/view/{{video.id}}', datasource: 'youtube' } }, '*' ) });
+          $('#bookmark-video').click(function(event) { window.top.postMessage({ event_id: 'add-bookmark', data: { language: getParameterByName('l'), qid: '', tags: [ 'work', 'video' ], url: 'https://conze.pt/app/video/?l=en&#/view/{{video.id}}', datasource: '' } }, '*' ) });
 
           $('#wander-to-next').click(function(event) { window.top.postMessage({ event_id: 'next-wander-video', data: {  } }, '*' ); });
           $('#wander-to-previous').click(function(event) { window.top.postMessage({ event_id: 'previous-wander-video', data: {  } }, '*' ); });
