--- a/app/video/styles/main.css
+++ b/app/video/styles/main.css
@@ -244,7 +244,11 @@ body.dark .toogles-video h3{
   font-size: smaller;
 }
 
-.bookmark-video {
+#bookmark-video-normal {
+  font-size: 0.7em;
+}
+
+#bookmark-video-wander {
   position: absolute;
   right: 70%;
   bottom: -0.3em;
