--- a/app/video/views/view.html
+++ b/app/video/views/view.html
@@ -59,14 +59,14 @@
 
             // show wander buttons
 
-            $('#bookmark-video').show();
+            $('#bookmark-video-wander').show();
             $('#wander-to-next').show();
             $('#wander-to-previous').show();
             $('#wander-youtube-terms').show();
 
           }
 
-          $('.bookmark-video').click(function(event) { window.top.postMessage({ event_id: 'add-bookmark', data: { language: getParameterByName('l'), qid: '', title: {{video.snippet.title}}, tags: [ 'work', 'video' ], url: `https://${CONZEPT_HOSTNAME }${CONZEPT_WEB_BASE }/app/video/?l=en&#/view/{{video.id}}`, datasource: '' } }, '*' ) });
+          $('#bookmark-video-normal, #bookmark-video-wander').click(function(event) { window.top.postMessage({ event_id: 'add-bookmark', data: { language: getParameterByName('l'), qid: '', title: {{video.snippet.title}}, tags: [ 'work', 'video' ], url: `https://${CONZEPT_HOSTNAME }${CONZEPT_WEB_BASE }/app/video/?l=en&#/view/{{video.id}}`, datasource: '' } }, '*' ) });
 
           $('#wander-to-next').click(function(event) { window.top.postMessage({ event_id: 'next-wander-video', data: {  } }, '*' ); });
           $('#wander-to-previous').click(function(event) { window.top.postMessage({ event_id: 'previous-wander-video', data: {  } }, '*' ); });
