--- a/app/video/styles/main.css
+++ b/app/video/styles/main.css
@@ -254,7 +254,8 @@ body.dark .toogles-video h3{
   bottom: -0.3em;
   z-index: 9999;
   color: white;
-  font-size: small !important;
+  font-size: 0.7em;
+  padding-bottom: 0.4em;
 }
 
 #wander-to-previous {
