--- a/app/video/views/view.html
+++ b/app/video/views/view.html
@@ -66,7 +66,7 @@
 
           }
 
-          $('#bookmark-video-normal, #bookmark-video-wander').click(function(event) { window.top.postMessage({ event_id: 'add-bookmark', data: { language: getParameterByName('l'), qid: '', title: document.getElementById( "title" ).innerText, tags: [ 'work', 'video' ], url: `https://${CONZEPT_HOSTNAME }${CONZEPT_WEB_BASE }/app/video/?l=en&#/view/{{video.id}}`, datasource: '' } }, '*' ) });
+          $('#bookmark-video-normal, #bookmark-video-wander').click(function(event) { const video_id = document.location.hash.replace('#/view/', '' ); window.top.postMessage({ event_id: 'add-bookmark', data: { language: getParameterByName('l'), qid: '', title: document.getElementById( "title" ).innerText, tags: [ 'work', 'video' ], gid: video_id, url: '', datasource: '' } }, '*' ) });
 
           $('#wander-to-next').click(function(event) { window.top.postMessage({ event_id: 'next-wander-video', data: {  } }, '*' ); });
           $('#wander-to-previous').click(function(event) { window.top.postMessage({ event_id: 'previous-wander-video', data: {  } }, '*' ); });
