--- a/app/video/views/search.html
+++ b/app/video/views/search.html
@@ -45,7 +45,7 @@
       <h4>resolution</h4>
       <ul class="side-nav">
           <li ng-class="{active: !$parent.searchdefinition}"><a ng-click="$parent.location.search('searchdefinition', null)">all</a></li>
-          <li ng-class="{active: $parent.searchdefinition == 'standard'}"><a ng-click="$parent.location.search('searchdefinition', 'standard')">SD</a></li>
+          <!--li ng-class="{active: $parent.searchdefinition == 'standard'}"><a ng-click="$parent.location.search('searchdefinition', 'standard')">SD</a></li-->
           <li ng-class="{active: $parent.searchdefinition == 'high'}"><a ng-click="$parent.location.search('searchdefinition', 'high')">HD</a></li>
       </ul>
     </div>  
