--- a/app/video/views/view.html
+++ b/app/video/views/view.html
@@ -97,8 +97,8 @@
         <div class="like" style="width: {{averageRating(video.statistics.likeCount, video.statistics.dislikeCount)}}%;"></div>
       </div>
       <ul>
-        <li><i class="fa fa-user"></i>&nbsp;&nbsp;<a href="#/user/{{video.snippet.channelId}}">{{video.snippet.channelTitle}}</a></li>
-        <li><i class="fa fa-eye"></i>&nbsp;&nbsp;{{video.statistics.viewCount | number:0}} views</li>
+        <li><a href="#/user/{{video.snippet.channelId}}">{{video.snippet.channelTitle}}</a></li>
+        <li>{{video.statistics.viewCount | number:0}} views</li>
         <li><i class="fa fa-calendar"></i>&nbsp;&nbsp;{{video.snippet.publishedAt | date}}</li>
         <li><a href="javascript:void(0)" id="bookmark-video-normal" style="" title="bookmark video"><i class="far fa-bookmark fa-2x"></i>&nbsp;&nbsp;bookmark</a></li>
       </ul>
