--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -1153,6 +1153,7 @@ mark, .highlight, li em, .mv-extra-desc > em, .mv-extra-desc > .searchmatch, det
 #datasources-setting .species { background: #6e74ee73; }
 #datasources-setting .business { background: #0c91d32b; }
 #datasources-setting .legal { background: #f3ddff96; }
+#datasources-setting .code { background: #0a602496; }
 #datasources-setting .news { background: #9708e82b; }
 #datasources-setting .media { background: #ee9d1e99; }
 #datasources-setting .web { background: #4b95dc82; }
